@@ -151,7 +151,7 @@ option boot parameter.
 daily <quote>sid_d-i</quote> CD images are built using daily D-I builds,
 udebs from unstable and regular packages from testing
  </listitem><listitem>
-daily <quote>squeeze_d-i</quote> CD/DVD images are built using the current
+daily <quote>wheezy_d-i</quote> CD/DVD images are built using the current
 D-I release in testing, udebs from testing and regular packages from testing
  </listitem><listitem>
 weekly CD builds are built using the current D-I release in testing, udebs from
@@ -167,7 +167,7 @@ a new stable (point) release
 
 The <quote>sid_d-i</quote> CDs are what's normally linked as the daily
 built images from the D-I project page; when preparing for a release
-those will link to <quote>squeeze_d-i</quote> CDs to facilitate pre-release
+those will link to <quote>wheezy_d-i</quote> CDs to facilitate pre-release
 testing.
 
 </para>
