@@ -4,6 +4,9 @@ debian-installer (2011xxxx) UNRELEASED; urgency=low
   * Add pata-modules to cdrom config for sparc and sparc64.
     Closes: #610906.
 
+  [ Joey Hess ]
+  * Initial changes to target wheezy.
+
  -- Jurij Smakov <jurij@debian.org>  Mon, 24 Jan 2011 21:27:36 +0000
 
 debian-installer (20110106) unstable; urgency=low
